fix header on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,6 +56,7 @@ main{
   overflow-x: hidden;
   @media all and (max-width: 768px) {  
     padding-top: 54px;
+    min-height: 100vh;
   }
 }
 .intro{
